--- a/index.html
+++ b/index.html
@@ -79,23 +79,12 @@
                 <div class="container">
                   <ul>
                     <li class="is-active">
-                      <a>Overview</a>
+                      <a>Contact</a>
                     </li>
                     <li>
-                      <a>Modifiers</a>
+                      <a>Github</a>
                     </li>
-                    <li>
-                      <a>Grid</a>
-                    </li>
-                    <li>
-                      <a>Elements</a>
-                    </li>
-                    <li>
-                      <a>Components</a>
-                    </li>
-                    <li>
-                      <a>Layout</a>
-                    </li>
+                  
                   </ul>
                 </div>
               </nav>
