--- a/header.html
+++ b/header.html
@@ -1,1 +1,51 @@
-TEST
+<div>
+    <nav class="navbar ">
+      <div class="container">
+        <div class="navbar-brand">
+          <a class="navbar-item">
+              <strong>ChimTeach</strong>
+          
+          </a>
+          <span class="navbar-burger burger" data-target="navbarMenuHero1">
+            <span></span>
+            <span></span>
+            <span></span>
+          </span>
+        </div>
+        <div id="navbarMenuHero1" class="navbar-menu">
+          <div class="navbar-end">
+            <a class="navbar-item is-active">
+              Home
+            </a>
+            <a class="navbar-item">
+              Tutorials
+            </a>
+            <a class="navbar-item">
+              Gallery
+            </a>
+            <div class="navbar-item has-dropdown is-hoverable">
+              <div class="navbar-link">
+                More
+              </div>
+              <div id="moreDropdown" class="navbar-dropdown ">
+                <a class="navbar-item " href="#">
+                  <div class="level is-mobile">
+                    <div class="level-left">
+                      <div class="level-item">
+                        <p>
+                          <strong>Extensions</strong>
+                          <br>
+                          <small>Side projects to enhance Bulma</small>
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </div>
+            
+          </div>
+        </div>
+      </div>
+    </nav>
+  </div>
